# 3D-Model-Viewer

./: .gitignore  CMakeLists.txt  README.md  makefile
dep/incl/glad/: glad.h
dep/src/glad/: glad.c
dep/src/imgui/backends/: imgui_impl_glfw.cpp
main/incl/: GUIController.h  camera.h  model.h  shader.h
main/shaders/fragment/: main.fs
main/src/: GUIController.cpp  camera.cpp  main.cpp  model.cpp  shader.cpp
